# Nexus-Storage

./: .gitignore  Cargo.toml  DRIVE_API_INTEGRATION.md  E2E_TEST_ANALYSIS.md  GITHUB.md  PHASE_7_COMPLETION.md  PROJECT_STATUS_FINAL.md  README.md  TEST_REPORT.md  TODO.md  build-android.sh  run-app.sh  wrangler.jsonc
.github/workflows/: android-release.yml  desktop-release.yml  linux-publish.yml  release.yml
nexus-cli/: Cargo.toml
nexus-cli/src/: cli.rs  main.rs  output.rs
nexus-core/: Cargo.toml
nexus-core/include/: nexus_core.h
nexus-core/src/: compress.rs  crypto.rs  decoder.rs  encoder.rs  ffi.rs  hasher.rs  kdf.rs  lib.rs  streaming.rs  types.rs
nexus-daemon/: api.go  archiver.go  cache.go  core.go  daemon_test.go  db.go  fuse.go  go.mod  go.sum  hardening_test.go  main.go  nexus_core.h  pipeline.go  queue.go  recovery.go  share.go  sync.go  sync_local_test.go  vfs.go  webdav.go  youtube_auth.go  youtube_playlists.go
nexus-daemon-client/: Cargo.toml
nexus-daemon-client/src/: client.rs  error.rs  lib.rs  types.rs
nexus-gui/: package-lock.json  package.json  tailwind.config.js
nexus-gui/scripts/: build-sidecar.sh
nexus-gui/src/: App.tsx  Dashboard.tsx  index.css  main.tsx
nexus-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
nexus-gui/src-tauri/capabilities/: default.json
nexus-gui/src-tauri/icons/: icon.icns
nexus-gui/src-tauri/src/: lib.rs  main.rs
nexus-gui/src-tauri/src/commands/: crypto.rs  mod.rs  session.rs
nexus-gui/src/components/: PasswordModal.tsx
nexus-gui/src/context/: SettingsContext.tsx
nexus-gui/src/pages/: LoginPage.tsx  RecoveryPage.tsx  SettingsPage.tsx
nexus-gui/src/styles/: LoginPage.css  RecoveryPage.css  SettingsPage.css
nexus-mobile/: adb_logs.txt  all.txt  debug_logs.txt  exhaustive_logs.txt  ffigen.yaml  final_check_logs.txt  fresh_logs.txt  huge_logs.txt  large_logs.txt  last_1000.txt  pubspec.yaml  test_yt_diag.dart  tmp_logs.txt
nexus-mobile/android/: build.gradle.kts  gradle.properties
nexus-mobile/android/app/: build.gradle.kts  proguard-rules.pro
nexus-mobile/android/app/src/main/: AndroidManifest.xml
nexus-mobile/android/app/src/main/kotlin/com/aurel/nexusStorage/: MainActivity.kt
nexus-mobile/android/app/src/main/res/layout/: native_ad_list_tile.xml
nexus-mobile/android/app/src/main/res/values-night-v31/: styles.xml
nexus-mobile/android/app/src/main/res/values-v31/: styles.xml
nexus-mobile/android/gradle/wrapper/: gradle-wrapper.properties
nexus-mobile/ios/Runner/: Info.plist
nexus-mobile/ios/Runner.xcodeproj/: project.pbxproj
nexus-mobile/lib/: main.dart
nexus-mobile/lib/config/: ad_units.dart
nexus-mobile/lib/core/: device_profiler.dart  task_config.dart  thermal_monitor.dart  transfer_state.dart
nexus-mobile/lib/ffi/: nexus_bindings.dart  nexus_loader.dart
nexus-mobile/lib/models/: file_record.dart
nexus-mobile/lib/services/: ad_service.dart  auth_service.dart  cleanup_service.dart  database_service.dart  logger_service.dart  nexus_ffmpeg.dart  nexus_service.dart  settings_service.dart  sync_service.dart  task_handler.dart  worker_service.dart  youtube_service.dart
nexus-mobile/lib/theme/: app_colors.dart  app_spacing.dart  app_theme.dart
nexus-mobile/lib/ui/: files_page.dart  settings_page.dart  tasks_page.dart
nexus-mobile/lib/ui/widgets/: app_button.dart  banner_ad_widget.dart  glass_card.dart  skeleton_item.dart  speed_dial_fab.dart
nexus-mobile/lib/utils/: exceptions.dart  l10n.dart
nexus-mobile/lib/widgets/: native_ad_widget.dart
nexus-mobile/linux/: CMakeLists.txt
nexus-mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
nexus-mobile/macos/Runner.xcodeproj/: project.pbxproj
nexus-mobile/macos/Runner/Configs/: AppInfo.xcconfig
nexus-mobile/plugins/flutter_foreground_task/lib/ui/: with_foreground_task.dart
nexus-mobile/plugins/flutter_foreground_task/lib/utils/: color_extension.dart
nexus-mobile/test/: widget_test.dart
nexus-mobile/web/: index.html
nexus-mobile/windows/flutter/: generated_plugins.cmake
nexus-mobile/windows/runner/: Runner.rc
nexus-site/: index.html  privacy.html  style.css  terms.html  wrangler.toml
nexus-tui/: Cargo.toml
nexus-tui/src/: app.rs  main.rs  theme.rs
nexus-tui/src/daemon/: auth.rs  commands.rs  mod.rs  poll.rs
nexus-tui/src/ui/: auth_ui.rs  chart.rs  command_bar.rs  file_table.rs  header.rs  helpers.rs  mod.rs  quota.rs  statusbar.rs  tasks.rs
packaging/aur/: PKGBUILD.template
packaging/flathub/: com.aurel.Nexus.yaml
(+6 files in other folders)
