[package]
name = "nexus-daemon-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared HTTP Client and Types for Nexus-Storage (CLI & TUI)"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
