[package]
name = "nexus-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NexusStorage Terminal Interactive UI (TUI)."

[dependencies]
nexus-daemon-client = { path = "../nexus-daemon-client" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full", "sync"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
sysinfo = "0.30"
chrono = "0.4"
